kubernetes/ocp-gpu/applications/admin-gemma-openclaw/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: openclaw-proxy-tls
  labels:
    app: openclaw
  name: openclaw
  namespace: admin-gemma-openclaw
spec:
  ports:
  - name: gateway
    port: 18789
    protocol: TCP
    targetPort: 18789
  - name: oauth-ui
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: openclaw
  type: ClusterIP
